delivery-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-service
  labels:
    app: delivery-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery-service
  template:
    metadata:
      labels:
        app: delivery-service
    spec:
      containers:
      - name: delivery-service
        image: 942204942825.dkr.ecr.eu-north-1.amazonaws.com/delivery-service:latest
        ports:
        - containerPort: 6001
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
  labels:
    app: delivery-service
spec:
  type: ClusterIP
  ports:
  - port: 6001
    targetPort: 6001
    protocol: TCP
  selector:
    app: delivery-service
