orders-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-service
  labels:
    app: orders-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-service
  template:
    metadata:
      labels:
        app: orders-service
    spec:
      containers:
      - name: orders-service
        image: 942204942825.dkr.ecr.eu-north-1.amazonaws.com/orders-service:latest
        ports:
        - containerPort: 6000
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  labels:
    app: orders-service
spec:
  type: ClusterIP
  ports:
  - port: 6000
    targetPort: 6000
    protocol: TCP
  selector:
    app: orders-service
